# Marx

./: .gitignore  .gitmodules  CMakeLists.txt  LOC.bat  Marx.sln  README.md  genProjects_Linux.sh  premake5.lua
DonHugo/: CMakeLists.txt  DonHugo.vcxproj  DonHugo.vcxproj.filters  SaveFileExampleLayout.txt  imgui.ini  save.dhsf
DonHugo/assets/shaders/: background.hlsl
DonHugo/src/: Application.cpp  MicPlayback.cpp  MicPlayback.h  MicPlayback2.cpp  MicPlayback2.h  Sound.cpp  Sound.h  Sound2.cpp  Sound2.h
DonHugo/src/Effects/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Distortion.cpp  Distortion.h  Echo.cpp  Echo.h  Effect.cpp  Effect.h  EffectList.cpp  EffectList.h  Equalizer.cpp  Equalizer.h  Flanger.cpp  Flanger.h  Gargle.cpp  Gargle.h  Reverb.cpp  Reverb.h
DonHugo/src/future/: CaptureBuffer.cpp  CaptureBuffer.h  CaptureDevice.cpp  CaptureDevice.h  DirectSoundIncludes.h  SaveFile.cpp  SaveFile.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  Tools.cpp  Tools.h
MarC/src/: MarC.h  mcpch.cpp  mcpch.h
MarC/src/MarC/: CompilerDataTypes.h  HeapMem.cpp  HeapMem.h  Tokenizer.cpp  Tokenizer.h
Marx/: CMakeLists.txt  FindDirectX11.cmake  Marx.vcxproj  Marx.vcxproj.filters
Marx/include/: Marx.h  mxpch.h
Marx/include/Marx/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Window.cpp  Window.h  WindowAPISelector.cpp  WindowAPISelector.h
Marx/include/Marx/Core/: Log.h  Profiler.h  Timestep.h
Marx/include/Marx/Events/: ControllerEvents.h  Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
Marx/include/Marx/Exceptions/: MarxException.h
Marx/include/Marx/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Marx/include/Marx/Input/: Controller.cpp  Controller.h  ControllerInputs.h  ControllerManager.cpp  ControllerManager.h  KeyCodeConverter.cpp  KeyCodeConverter.h  KeyCodes.h  MouseCodes.h
Marx/include/Marx/Platform/D3D11/: D3D11Buffer.cpp  D3D11Buffer.h  D3D11ConstantBuffers.cpp  D3D11ConstantBuffers.h  D3D11Conversions.h  D3D11GraphicsContext.cpp  D3D11GraphicsContext.h  D3D11InfoManager.h  D3D11RendererAPI.cpp  D3D11RendererAPI.h  D3D11Shader.cpp  D3D11Shader.h  D3D11Texture.cpp  D3D11Texture.h  D3D11VertexArray.cpp  D3D11VertexArray.h
Marx/include/Marx/Platform/GLFW/: CrossController.cpp  CrossController.h  CrossInput.cpp  CrossInput.h  CrossKeyCodes.h  CrossWindow.cpp  CrossWindow.h
Marx/include/Marx/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Marx/include/Marx/Platform/Unix/: UnixController.cpp  UnixController.h
Marx/include/Marx/Platform/Win32/: Win32Includes.h  Win32Input.cpp  Win32Input.h  Win32KeyCodes.h  Win32Window.cpp  Win32Window.h
Marx/include/Marx/Platform/XInput/: XController.cpp  XController.h
Marx/include/Marx/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererAPISelector.cpp  RendererAPISelector.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Marx/src/: Marx.h  mxpch.h
Marx/src/Marx/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
Marx/src/Marx/Core/: Log.h
Marx/src/Marx/Events/: Application.h  ControllerEvents.h  Event.h  Keyboard.h  KeyboardEvents.h  Mouse.h  MouseEvents.h
Marx/src/Marx/Exceptions/: ExceptionMacros.h  HrException.h  MarxException.h
Marx/src/Marx/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Marx/src/Marx/Input/: Controller.h  ControllerInputs.h  ControllerManager.cpp  ControllerManager.h  KeyCodes.h  XController.cpp  XController.h
Marx/src/Marx/Platform/D3D11/: D3D11Buffer.cpp  D3D11Buffer.h  D3D11ExceptionMacros.h  D3D11GraphicsContext.cpp  D3D11GraphicsContext.h  D3D11InfoException.h  D3D11InfoManager.cpp  D3D11InfoManager.h  D3D11RendererAPI.cpp  D3D11RendererAPI.h  D3D11Shader.cpp  D3D11Shader.h  D3D11Texture.cpp  D3D11Texture.h  D3D11VertexArray.cpp  D3D11VertexArray.h
Marx/src/Marx/Platform/DX11/: DX11ExceptionMacros.h  DX11GraphicsContext.cpp  DX11GraphicsContext.h  DX11Includes.h  DX11InfoManager.cpp  DX11InfoManager.h  DX11Window.cpp  DX11Window.h  ImGuiDX11Helper.cpp
Marx/src/Marx/Platform/Win32/: HrException.h  ImGuiWin32Helper.cpp  Win32Window.cpp  Win32Window.h
Marx/src/Marx/Platform/Windows/: HrException.h  WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Marx/src/Marx/Platform/XInput/: XController.cpp  XController.h
Marx/src/Marx/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Marx/src/shaders/: flatColorVS.hlsl  mazeLevelPS.hlsl  mazeLevelVS.hlsl  pixelShader.hlsl  vertexShader.hlsl
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  code.marc  imgui.ini
Sandbox/assets/shaders/: ControllerVisualizer.hlsl  PhongTexture.glsl  PhongTexture.hlsl  Texture.glsl  Texture.hlsl  flatColorPS.hlsl  flatColorVS.hlsl  texturePS.hlsl  textureVS.hlsl
Sandbox/src/: ControllerVisualizer.cpp  ControllerVisualizer.h  ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
